@@ -1,11 +1,33 @@
+import org.jetbrains.compose.desktop.application.dsl.TargetFormat
+import org.jetbrains.compose.reload.gradle.ComposeHotRun
+
 plugins {
-    id("divabuild.library-app-desktop")
+    alias(libs.plugins.kotlin.jvm)
+    alias(libs.plugins.compose.multiplatform)
+    alias(libs.plugins.compose.compiler)
+    alias(libs.plugins.compose.hot.reload)
 }
 
-kotlin {
-    sourceSets {
-        commonMain.dependencies {
-            implementation(projects.sharedUI)
+tasks.withType<ComposeHotRun>().configureEach {
+    jvmArgs("--enable-native-access=ALL-UNNAMED")
+}
+
+dependencies {
+    implementation(compose.desktop.currentOs)
+    implementation(libs.logback.classic)
+    implementation(libs.diva.shared.ui)
+}
+
+compose {
+    desktop {
+        application {
+            mainClass = "com.diva.app.MainKt"
+
+            nativeDistributions {
+                targetFormats(TargetFormat.Dmg, TargetFormat.Msi, TargetFormat.Deb)
+                packageName = "com.diva.app"
+                packageVersion = libs.versions.app.version.name.get()
+            }
         }
     }
 }
